更换部分新语法。 统一plugin对象从Core.java中获取。 修补完整命令名不触发对应方法的问题。